# Substack2Markdown

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  substack_scraper.py  test_remote.py
