[project]
name = "substack2markdown"
version = "0.1.0"
description = "Scrape Substack posts and convert them to Markdown"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4",
    "html2text",
    "markdown",
    "requests",
    "tqdm",
    "selenium",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["substack_scraper.py"]
